--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Get advice</title>
+    <title>profileCard</title>
   </head>
   <body>
     <div id="app"></div>
